--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="">
+<html>
     <head>
       <meta charset="utf-8">
       <title>dennisgoldin.io</title>
@@ -11,19 +11,40 @@
 		<!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'> -->
     </head>
     <body>
-      <div class="content-container" ng-view>
+      <div class="content-container">
         <header>
           <div>
-            <h1>Dennis Goldin</h1>
+            <h1>dennisgoldin.io</h1>
             <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="">Projects</a></li>
-              <li><a href="">Skills</a></li>
-              <li><a href="">Blog</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Projects</a></li>
+              <li><a href="#">Resume</a></li>
+              <!-- <li><a href="#">Blog</a></li> -->
+              <li><a href="#">Contact</a></li>
             </ul>
           </div>
         </header>
+
+        <section>
+          <h2>PROJECTS</h2>
+          <div class="pro-crd">
+            <div class="pro-crd-col-1-2">
+              <div id="pro-crd-spacer-1"><!-- used to ajust vertical alignent in card --></div>
+              <h3>TIY-Chessboard</h3>
+              <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
+              <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop"></i> &nbsp; <i class="fa fa-tablet"></i> &nbsp; <i class="fa fa-mobile"></i></p>
+              <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.  Some are pixel perfect duplicates of blue prints.</p>
+              <div class="pro-crd-btn-wrapper">
+                <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
+              </div>
+            </div>
+            <div class="pro-crd-col-2-2">
+              <img src="./assets/images/chessboard-project.png" width="400" height="300" alt="" class="pro-crd-img">
+            </div>
+          </div>
+        </section>
+
+
       </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script>
