--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           </div>
         </header>
 
+<div class="pro-container">
+
         <section>
           <h2>PROJECTS</h2>
           <div class="pro-crd">
@@ -44,26 +46,29 @@
           </div>
         </section>
 
-<section>
-  <!-- <h2>PROJECTS</h2> -->
-  <div class="pro-crd">
-    <div class="pro-crd-col-1-2">
-      <div id="pro-crd-spacer-1"><!-- used to ajust vertical alignent in card --></div>
-      <h3>TIY-Chessboard</h3>
-      <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
-      <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
-      <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.  Some are pixel perfect duplicates of blue prints.</p>
-      <div class="pro-crd-btn-wrapper">
-        <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
-      </div>
-    </div>
-    <div class="pro-crd-col-2-2">
-      <img src="./assets/images/chessboard-project.png" width="400" height="300" alt="" class="pro-crd-img">
-    </div>
-  </div>
-</section>
+        <div class="pro-divider">
+        </div>
 
+        <section>
+          <!-- <h2>PROJECTS</h2> -->
+          <div class="pro-crd">
+            <div class="pro-crd-col-1-2">
+              <div id="pro-crd-spacer-1"><!-- used to ajust vertical alignent in card --></div>
+              <h3>TIY-Chessboard</h3>
+              <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
+              <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
+              <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.  Some are pixel perfect duplicates of blue prints.</p>
+              <div class="pro-crd-btn-wrapper">
+                <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
+              </div>
+            </div>
+            <div class="pro-crd-col-2-2">
+              <img src="./assets/images/chessboard-project.png" width="400" height="300" alt="" class="pro-crd-img">
+            </div>
+          </div>
+        </section>
 
+</div>
 
       </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script>
