--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
           </div>
         </header>
 
+<div class="home-container">
+  <!-- <div class="home-image-wrapper"> -->
+    Hello, my name is Dennis Goldin and I'm a <strong>Front End Engineer</strong>.
+    <br><br>
+    <img class="home-image" src="./assets/images/dennis-goldin-small-selfie.jpg" alt="Dennis Goldin - Selfie">
+  <!-- </div> -->
+  <div class="home-bio-wrapper">
+      I recently graduated from The Iron Yard in Durhan, NC. which is an immersive and intense coding boot camp.  We covered a vast range of topics including Git & GitHub, UX & Design, HTML5, CSS3 & SASS, JavaScript, jQuery, lodash, AJAX, JSON, Angular JS, front end integration into Ruby on Rails, the Agile Development Process and self learning to mention the highlights.  The course concluded with a 2.5 week collaborative final project and presentation with members of the Back End Engineering cohort whose focus was Ruby on Rails.  With a the 3 month, 60 - 80 hours per week journey through The Iron Yard recently under my belt, I am spending my time finishing projects for and developing my portfolio while also looking for interesting employment oppurtunites.  Topics of importance and interest to me in no particular order include culture fit, mentorship, diversity, front end frame works, native script, mean stack and any cool web based projects.
+  </div>
+</div>
+
 <div class="pro-container">
 
         <section>
