Add contact info section

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
           <div class="home-container">
             <!-- <div class="home-image-wrapper"> -->
-              <div style="text-align:center;font-size:1.5em;">Hello! My name is Dennis Goldin and I'm a <strong>Front End Engineer</strong>.</div>
+              <div style="text-align:center;font-size:1.5em;font-weight:lighter;">Hello! My name is Dennis Goldin and I'm a <strong>Front End Engineer</strong>.</div>
               <br><br>
               <img class="home-image" src="./assets/images/dennis-goldin-small-selfie.jpg" alt="Dennis Goldin - Selfie">
             <!-- </div> -->
             <div class="home-bio-wrapper">
-                I recently graduated from Front End Engineering course at The Iron Yard in Durham, NC. This immersive and intense coding boot camp covers a vast range of topics including Git & GitHub, UX & Design, HTML5, CSS3 & SASS, JavaScript, jQuery, lodash, AJAX, JSON, Angular JS, front end integration into Ruby on Rails, the Agile Development Process and self learning to mention the highlights.  The course concluded with a 2.5 week collaborative final project and presentation with members of the Back End Engineering cohort whose focus was Ruby on Rails.  With a the 3 month, 60 - 80 hours per week journey through The Iron Yard recently under my belt, I am spending my time finishing projects for and developing my portfolio while also looking for interesting employment oppurtunites.  Topics of importance and interest to me in no particular order include culture fit, mentorship, diversity, front end frame works, native script, mean stack and any cool web based projects.
+                I recently graduated from Front End Engineering course at The Iron Yard in Durham, NC. This immersive and intense coding boot camp covers a vast range of topics including Git & GitHub, UX & Design, HTML5, CSS3 & SASS, JavaScript, jQuery, lodash, AJAX, JSON, Angular JS, front end integration into Ruby on Rails, the Agile Development Process and self learning to mention the highlights.  The course concluded with a 2.5 week collaborative final project and presentation with members of the Back End Engineering cohort whose focus was Ruby on Rails.  With a the 3 month, 60 - 80 hours per week journey through The Iron Yard recently under my belt, I am spending my time finishing projects, teaching myself new front-end and back end technologies and developing my portfolio while looking for interesting employment oppurtunites.
             </div>
           </div>
 
@@ -58,8 +58,7 @@
             </div>
           </section>
 
-        <div class="pro-divider">
-        </div>
+        <div class="pro-divider"></div>
 
           <section>
             <!-- <h2>PROJECTS</h2> -->
@@ -79,6 +78,55 @@
               </div>
             </div>
           </section>
+
+          <div class="pro-divider"></div>
+
+            <section>
+              <!-- <h2>PROJECTS</h2> -->
+              <div class="pro-crd">
+                <div class="pro-crd-col-1-2">
+                  <div id="pro-crd-spacer-1"><!-- used to ajust vertical alignent in card --></div>
+                  <h3>TIY-Chessboard</h3>
+                  <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
+                  <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
+                  <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.  Some are pixel perfect duplicates of blue prints.</p>
+                  <div class="pro-crd-btn-wrapper">
+                    <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
+                  </div>
+                </div>
+                <div class="pro-crd-col-2-2">
+                  <img src="./assets/images/chessboard-project.png" width="400" height="300" alt="" class="pro-crd-img">
+                </div>
+              </div>
+            </section>
+
+            <div class="pro-divider"></div>
+
+            <section>
+              <!-- <h2>PROJECTS</h2> -->
+              <div class="pro-crd">
+                <div class="pro-crd-col-1-2">
+                  <div id="pro-crd-spacer-1"><!-- used to ajust vertical alignent in card --></div>
+                  <h3>TIY-Chessboard</h3>
+                  <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
+                  <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
+                  <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.  Some are pixel perfect duplicates of blue prints.</p>
+                  <div class="pro-crd-btn-wrapper">
+                    <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
+                  </div>
+                </div>
+                <div class="pro-crd-col-2-2">
+                  <img src="./assets/images/chessboard-project.png" width="400" height="300" alt="" class="pro-crd-img">
+                </div>
+              </div>
+            </section>
+
+        </div>
+
+        <div class="contact-container">
+
+          <a id="contacts"></a>
+          CONTACT STUFF
 
         </div>
 
