Fix CSS element positioning, font sizes and weights

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div>
             <h1>dennisgoldin.io</h1>
             <ul>
-              <li><a href="#">Home</a></li>
+              <li><a class="smooth-scroll" href="#home">Home</a></li>
               <li><a class="smooth-scroll" href="#projects">Projects</a></li>
               <li><a target="_blank" href="./assets/docs/resume-v2.pdf">Resume</a></li>
               <!-- <li><a href="#">Blog</a></li> -->
@@ -27,12 +27,13 @@
 
           <div class="home-container">
             <!-- <div class="home-image-wrapper"> -->
-              <div style="text-align:center;font-size:1.5em;font-weight:lighter;">Hello! My name is Dennis Goldin and I'm a <strong>Front End Engineer</strong>.</div>
+              <a id="home"></a>
+              <div class="home-heading">Hello! My name is Dennis Goldin and I'm a <strong>Front End Engineer</strong>.</div>
               <br><br>
               <img class="home-image" src="./assets/images/dennis-goldin-small-selfie.jpg" alt="Dennis Goldin - Selfie">
             <!-- </div> -->
             <div class="home-bio-wrapper">
-                I recently graduated from Front End Engineering course at The Iron Yard in Durham, NC. This immersive and intense coding boot camp covers a vast range of topics including Git & GitHub, UX & Design, HTML5, CSS3 & SASS, JavaScript, jQuery, lodash, AJAX, JSON, Angular JS, front end integration into Ruby on Rails, the Agile Development Process and self learning to mention the highlights.  The course concluded with a 2.5 week collaborative final project and presentation with members of the Back End Engineering cohort whose focus was Ruby on Rails.  With a the 3 month, 60 - 80 hours per week journey through The Iron Yard recently under my belt, I am spending my time finishing projects, teaching myself new front-end and back end technologies and developing my portfolio while looking for interesting employment oppurtunites.
+                I recently graduated from the Front End Engineering course at The Iron Yard in Durham, NC. This immersive and intense coding boot camp covers a vast range of topics including Git & GitHub, UX & Design, HTML5, CSS3 & SASS, JavaScript, jQuery, lodash, AJAX, JSON, Angular JS, front end integration into Ruby on Rails, the Agile Development Process and self learning to mention the highlights.  The course concluded with a 2.5 week collaborative final project and presentation with members of the Back End Engineering cohort whose focus was Ruby on Rails.  With a 3 month, 60 - 80 hours per week journey through The Iron Yard recently under my belt, I am spending my time finishing projects, teaching myself new front-end and back end technologies and developing my portfolio while looking for interesting employment oppurtunites.
             </div>
           </div>
 
@@ -124,9 +125,9 @@
         </div>
 
         <div class="contact-container">
-
           <a id="contacts"></a>
-          CONTACT STUFF
+          <h2>CONTACT</h2>
+          Some Stuff
 
         </div>
 
