Add contact content and links

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <img class="home-image" src="./assets/images/dennis-goldin-small-selfie.jpg" alt="Dennis Goldin - Selfie">
             <!-- </div> -->
             <div class="home-bio-wrapper">
-                I recently graduated from the Front End Engineering course at The Iron Yard in Durham, NC. This immersive and intense coding boot camp covers a vast range of topics including Git & GitHub, UX & Design, HTML5, CSS3 & SASS, JavaScript, jQuery, lodash, AJAX, JSON, Angular JS, front end integration into Ruby on Rails, the Agile Development Process and self learning to mention the highlights.  The course concluded with a 2.5 week collaborative final project and presentation with members of the Back End Engineering cohort whose focus was Ruby on Rails.  With a 3 month, 60 - 80 hours per week journey through The Iron Yard recently under my belt, I am spending my time finishing projects, teaching myself new front-end and back end technologies and developing my portfolio while looking for interesting employment oppurtunites.
+                I recently graduated from the Front End Engineering course at The Iron Yard in Durham, NC. This immersive and intense coding boot camp covers a vast range of topics including Git & GitHub, UX & Design, HTML5, CSS3 & SASS, JavaScript, jQuery, lodash, AJAX, JSON, Angular JS, front end integration into Ruby on Rails, the Agile Development Process and self learning to mention the highlights.  The course concluded with a 2.5 week collaborative final project and presentation with members of the Back End Engineering cohort whose focus was Ruby on Rails.  With a 3 month, 60 - 80 hours per week journey through The Iron Yard under my belt, I'm spending my teaching myself new front-end and back-end technologies, developing my portfolio and looking for interesting employment oppurtunites.
             </div>
           </div>
 
@@ -44,11 +44,12 @@
             <h2>PROJECTS</h2>
             <div class="pro-crd">
               <div class="pro-crd-col-1-2">
-                <div id="pro-crd-spacer-1"><!-- used to ajust vertical alignent in card --></div>
+                <!-- used to ajust vertical alignent in card -->
+                <!-- <div id="pro-crd-spacer-1"></div> -->
                 <h3>TIY-Chessboard</h3>
                 <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
                 <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
-                <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.  Some are pixel perfect duplicates of blue prints.</p>
+                <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.</p>
                 <div class="pro-crd-btn-wrapper">
                   <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
                 </div>
@@ -65,11 +66,12 @@
             <!-- <h2>PROJECTS</h2> -->
             <div class="pro-crd">
               <div class="pro-crd-col-1-2">
-                <div id="pro-crd-spacer-1"><!-- used to ajust vertical alignent in card --></div>
+                <!-- used to ajust vertical alignent in card -->
+                <!-- <div id="pro-crd-spacer-1"></div> -->
                 <h3>TIY-Chessboard</h3>
                 <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
                 <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
-                <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.  Some are pixel perfect duplicates of blue prints.</p>
+                <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see.</p>
                 <div class="pro-crd-btn-wrapper">
                   <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
                 </div>
@@ -86,11 +88,12 @@
               <!-- <h2>PROJECTS</h2> -->
               <div class="pro-crd">
                 <div class="pro-crd-col-1-2">
-                  <div id="pro-crd-spacer-1"><!-- used to ajust vertical alignent in card --></div>
+                  <!-- used to ajust vertical alignent in card -->
+                  <!-- <div id="pro-crd-spacer-1"></div> -->
                   <h3>TIY-Chessboard</h3>
                   <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
                   <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
-                  <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.  Some are pixel perfect duplicates of blue prints.</p>
+                  <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.</p>
                   <div class="pro-crd-btn-wrapper">
                     <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
                   </div>
@@ -107,11 +110,12 @@
               <!-- <h2>PROJECTS</h2> -->
               <div class="pro-crd">
                 <div class="pro-crd-col-1-2">
-                  <div id="pro-crd-spacer-1"><!-- used to ajust vertical alignent in card --></div>
+                  <!-- used to ajust vertical alignent in card -->
+                  <!-- <div id="pro-crd-spacer-1"></div> -->
                   <h3>TIY-Chessboard</h3>
                   <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
                   <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
-                  <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.  Some are pixel perfect duplicates of blue prints.</p>
+                  <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.</p>
                   <div class="pro-crd-btn-wrapper">
                     <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
                   </div>
@@ -127,8 +131,21 @@
         <div class="contact-container">
           <a id="contacts"></a>
           <h2>CONTACT</h2>
-          Some Stuff
-
+          Dennis Goldin<br>3124 Summer Oaks Dr.<br>Apex, NC 27539
+          <br>
+          <br>
+          919-810-7025
+          <br>
+          <br>
+          <a class="contact-link" href="mailto:dennis.goldin@gmail.com"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i><a>
+          &nbsp;
+          <a class="contact-link" target="_blank" href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i><a>
+          &nbsp;
+          <a class="contact-link" target="_blank" href="https://github.com/dennisgoldin"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i><a>
+          &nbsp;
+          <a class="contact-link" href="skype:live:dennis.goldin?userinfo"><i class="fa fa-skype fa-2x" aria-hidden="true"></i><a>
+          &nbsp;
+          <!-- <a href="#"><i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i><a> -->
         </div>
 
       </div>
