Add images and content to projects section

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
               <div class="pro-crd-col-1-2">
                 <!-- used to ajust vertical alignent in card -->
                 <!-- <div id="pro-crd-spacer-1"></div> -->
-                <h3>TIY-Chessboard</h3>
-                <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
-                <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
+                <h3>SpoonBoards &nbsp; <a class="contact-link" target="_blank" href="https://github.com/SpoonBoards/spoonboards"><i class="fa fa-github-square" aria-hidden="true"></i><a></h3>
+                <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, AJAX</p>
+                <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i></p>
                 <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.</p>
                 <div class="pro-crd-btn-wrapper">
-                  <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
+                  <a href="http://spoonboards.herokuapp.com/carts"><button>VIEW PROJECT</button></a>
                 </div>
               </div>
               <div class="pro-crd-col-2-2">
-                <img src="./assets/images/chessboard-project.png" width="400" height="300" alt="" class="pro-crd-img">
+                <img src="./assets/images/spoonboards.png" width="400" height="300" alt="SpoonBoards" class="pro-crd-img">
               </div>
             </div>
           </section>
@@ -68,9 +68,9 @@
               <div class="pro-crd-col-1-2">
                 <!-- used to ajust vertical alignent in card -->
                 <!-- <div id="pro-crd-spacer-1"></div> -->
-                <h3>TIY-Chessboard</h3>
-                <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
-                <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
+                <h3>TIY-Chessboard &nbsp; <a class="contact-link" target="_blank" href="https://github.com/tiyd-fee-2016-02/TIY-Chessboard-Team-Gran-Saman"><i class="fa fa-github-square" aria-hidden="true"></i><a></h3>
+                <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY</p>
+                <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i></p>
                 <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see.</p>
                 <div class="pro-crd-btn-wrapper">
                   <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
@@ -85,11 +85,27 @@
           <div class="pro-divider"></div>
 
             <section>
-              <!-- <h2>PROJECTS</h2> -->
               <div class="pro-crd">
                 <div class="pro-crd-col-1-2">
-                  <!-- used to ajust vertical alignent in card -->
-                  <!-- <div id="pro-crd-spacer-1"></div> -->
+                  <h3>Memory Game &nbsp; <a class="contact-link" target="_blank" href="https://github.com/dennisgoldin/memory-layout/tree/jquery-version"><i class="fa fa-github-square" aria-hidden="true"></i><a></h3>
+                  <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY</p>
+                  <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
+                  <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.</p>
+                  <div class="pro-crd-btn-wrapper">
+                    <a href="http://dennisgoldin.github.io/memory-layout/index.html"><button>VIEW PROJECT</button></a>
+                  </div>
+                </div>
+                <div class="pro-crd-col-2-2">
+                  <img src="./assets/images/memory-game.png" width="400" height="300" alt="" class="pro-crd-img">
+                </div>
+              </div>
+            </section>
+
+            <!-- <div class="pro-divider"></div> -->
+
+            <!-- <section>
+              <div class="pro-crd">
+                <div class="pro-crd-col-1-2">
                   <h3>TIY-Chessboard</h3>
                   <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
                   <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
@@ -102,29 +118,7 @@
                   <img src="./assets/images/chessboard-project.png" width="400" height="300" alt="" class="pro-crd-img">
                 </div>
               </div>
-            </section>
-
-            <div class="pro-divider"></div>
-
-            <section>
-              <!-- <h2>PROJECTS</h2> -->
-              <div class="pro-crd">
-                <div class="pro-crd-col-1-2">
-                  <!-- used to ajust vertical alignent in card -->
-                  <!-- <div id="pro-crd-spacer-1"></div> -->
-                  <h3>TIY-Chessboard</h3>
-                  <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, Angular</p>
-                  <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
-                  <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.</p>
-                  <div class="pro-crd-btn-wrapper">
-                    <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
-                  </div>
-                </div>
-                <div class="pro-crd-col-2-2">
-                  <img src="./assets/images/chessboard-project.png" width="400" height="300" alt="" class="pro-crd-img">
-                </div>
-              </div>
-            </section>
+            </section> -->
 
         </div>
 
