--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h3>SpoonBoards &nbsp; <a class="contact-link" target="_blank" href="https://github.com/SpoonBoards/spoonboards"><i class="fa fa-github-square" aria-hidden="true"></i><a></h3>
                 <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY, AJAX</p>
                 <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i></p>
-                <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.</p>
+                <p>This is my final project from The Iron Yard.  A company called Spoonflower asked us to prototype a feature to manage collections of their fabric desings called "Spoonboards".  Highlights include CRUD functionality, drag and drop and endless scroll on search results.</p>
                 <div class="pro-crd-btn-wrapper">
                   <a href="http://spoonboards.herokuapp.com/carts"><button>VIEW PROJECT</button></a>
                 </div>
@@ -71,7 +71,7 @@
                 <h3>TIY-Chessboard &nbsp; <a class="contact-link" target="_blank" href="https://github.com/tiyd-fee-2016-02/TIY-Chessboard-Team-Gran-Saman"><i class="fa fa-github-square" aria-hidden="true"></i><a></h3>
                 <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY</p>
                 <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i></p>
-                <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see.</p>
+                <p>This is a chessboard demonstration application which walks through the steps of the Catalan Opening: Closed Variation. Functionlaity includes play, pause, fast forward, rewind and step through signle moves capabilities. </p>
                 <div class="pro-crd-btn-wrapper">
                   <a href="http://tiyd-fee-2016-02.github.io/TIY-Chessboard-Team-Gran-Saman/"><button>VIEW PROJECT</button></a>
                 </div>
@@ -90,7 +90,7 @@
                   <h3>Memory Game &nbsp; <a class="contact-link" target="_blank" href="https://github.com/dennisgoldin/memory-layout/tree/jquery-version"><i class="fa fa-github-square" aria-hidden="true"></i><a></h3>
                   <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY</p>
                   <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
-                  <p>This is the description of my project.  Some are pixel perfect duplicates of blue prints.  Some will use jQuery and Angular.  You never really know what you may see. This is the description of my project.</p>
+                  <p>The classic memory tile game implemented as a web application.  This variation includes an easy and hard mode, radomized tile order, lives counter, a timer and some soothing music to help the player focus.</p>
                   <div class="pro-crd-btn-wrapper">
                     <a href="http://dennisgoldin.github.io/memory-layout/index.html"><button>VIEW PROJECT</button></a>
                   </div>
