--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <h3>Memory Game &nbsp; <a class="contact-link" target="_blank" href="https://github.com/dennisgoldin/memory-layout/tree/jquery-version"><i class="fa fa-github-square" aria-hidden="true"></i><a></h3>
                   <p><span class="pro-crd-label">TECH:</span> HTML, CSS + SASS, JavaScript, jQUERY</p>
                   <p><span class="pro-crd-label">PLATFORM: </span> &nbsp; <i class="fa fa-desktop fa-2x"></i> &nbsp; <i class="fa fa-tablet fa-2x"></i> &nbsp; <i class="fa fa-mobile fa-2x"></i></p>
-                  <p>The classic memory tile game implemented as a web application.  This variation includes an easy and hard mode, radomized tile order, lives counter, a timer and some soothing music to help the player focus.</p>
+                  <p>The classic memory tile game implemented as a web application.  This variation includes an easy and hard mode, randomized tile order, lives counter, a timer and some soothing music to help the player focus.</p>
                   <div class="pro-crd-btn-wrapper">
                     <a href="http://dennisgoldin.github.io/memory-layout/index.html"><button>VIEW PROJECT</button></a>
                   </div>
