Fix typo, add 2 paragraph format to intro

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
               <img class="home-image" src="./assets/images/dennis-goldin-small-selfie.jpg" alt="Dennis Goldin - Selfie">
             <!-- </div> -->
             <div class="home-bio-wrapper">
-                I recently graduated from the Front End Engineering course at The Iron Yard in Durham, NC. This immersive and intense coding boot camp covers a vast range of topics including Git & GitHub, UX & Design, HTML5, CSS3 & SASS, JavaScript, jQuery, lodash, AJAX, JSON, Angular JS, front end integration into Ruby on Rails, the Agile Development Process and self learning to mention the highlights.  The course concluded with a 2.5 week collaborative final project and presentation with members of the Back End Engineering cohort whose focus was Ruby on Rails.  With a 3 month, 60 - 80 hours per week journey through The Iron Yard under my belt, I'm teaching myself new front end and back end technologies, developing my portfolio and looking for interesting employment oppurtunites.
+                I recently graduated from the Front End Engineering course at The Iron Yard in Durham, NC. This immersive and intense coding boot camp covers a vast range of topics including Git & GitHub, UX & Design, HTML5, CSS3 & SASS, JavaScript, jQuery, lodash, AJAX, JSON, Angular JS, front end integration into Ruby on Rails, the Agile Development Process and self-learning to mention the highlights.
+                <br>
+                <br>
+                The course concluded with a 2.5 week collaborative final project and presentation with members of the Back End Engineering cohort whose focus was Ruby on Rails.  With a 3 month, 60 - 80 hours per week journey through The Iron Yard under my belt, I'm teaching myself new front end and back end technologies, developing my portfolio and looking for interesting employment oppurtunites.
             </div>
           </div>
 
