Remove street address and zip code from contact information

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="contact-container">
           <a id="contacts"></a>
           <h2>CONTACT</h2>
-          Dennis Goldin<br>3124 Summer Oaks Dr.<br>Apex, NC 27539
+          Dennis Goldin<br>Apex, NC
           <br>
           <br>
           919-810-7025
